add: animation file

--- a/personalPortfolio/index.html
+++ b/personalPortfolio/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.2.4/custom-elements.min.js.map"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.2.4/custom-elements.min.js"></script>
 </head>
 
 <body class="main color-inverted">
@@ -65,7 +67,6 @@
                     </label>
                     <input title="Dark mode" type="checkbox" name="dark-mode" id="dark-mode" title="Switch Dark Mode">
                     <div class="switch">
-                        <div class="background"></div>
                         <div class="pin"></div>
                     </div>
                 </div>
@@ -91,7 +92,7 @@
                     <g>
                         <path class="st0" d="M-113,1080C-367.4,807.1-380,250.9-113,0c99.3-93.3,232-139.5,828-123c341.4,9.5,756.8,37.3,1229,105
 		c11.5,44.7,19.1,106.5-11,159c-120.9,210.6-647.5-81.1-949,152c-240.8,186.2-66.5,495.9-387,787c-58.4,53.1-208.6,185.6-402,168
-		C29.6,1233-79.3,1116.2-113,1080z" />
+		C29.6,1233-79.3,1116.2-113,1080z"></path>
                     </g>
                 </svg></div>
             <div class="row color-inverted">
@@ -310,7 +311,7 @@
 
                 <div class="col-xs12 col-md6">
 
-                    <form class="dark color-inverted main pa8" id="contact" name="contact" action="">
+                    <form class="color-inverted main pa8" id="contact" name="contact" action="">
 
                         <fieldset class="main pa8 mb8">
                             <legend class="mb16"> Contact form</legend>
@@ -369,7 +370,7 @@
     </footer>
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <script src="js/index.js" type="module"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.2.4/custom-elements.min.js"></script>
+    
     <!-- <script src="https://cdn.freecodecamp.org/<i class="mdi mdi-read">able-projects-fcc/v1/bundle.js"></script> --></i>
 </body>
 
