--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -9,7 +9,9 @@
     <title>Product Landing Page</title>
     <link rel="stylesheet" href="./styles/index/reset.css">
     <link rel="stylesheet" href="./styles/index/index.css">
-    <link rel="stylesheet" href="./styles/index/materialdesignicons.min.css">
+    <!-- <link rel="stylesheet" href="./styles/index/materialdesignicons.min.css"> -->
+
+    <script src="./js/index.js" type="module"></script>
 </head>
 
 <body class="main">
@@ -18,14 +20,82 @@
         <li><a href="#main">Skip to main content</a></li>
     </ul>
 
-    <header id="header">
+    <header id="header" class="primary color-inverted">
         <nav id="nav">
-            
+            <ul>
+                <li><a href="#main-welcome">Link 1</a></li>
+                <li><a href="#main-features">Link 2</a></li>
+                <li><a href="#main-how-it-works">Link 3</a></li>
+                <li><a href="#main-pricing">Link 4</a></li>
+                <li><a href="#main-contact">Link 5</a></li>
+            </ul>
         </nav>
     </header>
 
     <main id="main">
+        <!-- <section id="main-welcome" class="row">
+            <section
+                class="row pa4 pt8 color-inverted col-xs12 col-sm6 xs-align-items-center xs-justify-content-center pa4">
 
+                <div class="box secondary pa4 col-xs10 col-sm6">
+                    <header class="box-header">
+                        <figure><img src="./img/rosa_land.png" alt=""></figure>
+                        <h1>autem harum doloribus id quis voluptate</h1>
+                        <h2></h2>
+                    </header>
+                    <div class="box-content">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae quas fugit, iste
+                            doloremque
+                            voluptate.
+                        </p>
+                    </div>
+                    <footer class="box-footer">
+                        <div class="box-actions"><button class="button">Conferir</button></div>
+                    </footer>
+                </div>
+
+            </section>
+            <section
+                class="row secondary color-inverted col-xs12 col-sm6 xs-align-items-center xs-justify-content-center pa4">
+
+                <div class="register col-xs10 col-sm6 row xs-justify-content-center xs-text-align-left">
+                    <h2>Ex accusamus tempore culpa placeat?</h2>
+                    <label for="email" class="sr-only">Ex accusamus tempore culpa placeat?</label>
+                    <input type="email" name="email" maxlength="65" minlength="5" placeholder="Your e-mail">
+                    <input type="submit" role="button" class="button mt4" value="Registry" aria-valuetext="Registry">
+                </div>
+
+
+            </section>
+        </section> -->
+        <section id="main-features" data-animation-activator="1" class="row accent">
+            <h2 class="col-xs12 xs-text-align-center pa4">Title 2</h2>
+
+            <div class="box little-box ma4 pa4">
+                <div class="little-box-content">
+                    <h3>Placeat omnis vero</h3>
+                    <p>Lorem ipsum dolor sit, laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde illum est dolores placeat consequuntur corrupti. Voluptatum, fugit sunt!</p>
+                </div>
+                <div class="little-box-image"><img src="./img/rosa_port.png" alt=""></div>
+            </div>
+            <div class="box little-box ma4 pa4">
+                <div class="little-box-content">
+                    <h3>Quidem dicta earum temporibus cum necessitatibus</h3>
+                    <p>Amet dolores fugiat quo. Laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde illum est dolores placeat consequuntur corrupti.</p>
+                </div>
+                <div class="little-box-image"><img src="./img/rosa_land.png" alt=""></div>
+            </div>
+
+        </section>
+        <section id="main-how-it-works" data-animation-activator="2" class="row">
+            <h2 class="col-xs12 xs-text-align-center  pa4">Title 3</h2>
+        </section>
+        <section id="main-pricing" class="row">
+            <h2 class="col-xs12 xs-text-align-center  pa4">Title 4</h2>
+        </section>
+        <section id="main-contact" class="row">
+            <h2 class="col-xs12 xs-text-align-center  pa4">Title 5</h2>
+        </section>
     </main>
 
     <footer id="footer">
