add: pricing section styles

--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <main id="main">
-        <!-- <section id="main-welcome" class="row">
+        <section id="main-welcome" class="row">
             <section
                 class="row pa4 pt8 color-inverted col-xs12 col-sm6 xs-align-items-center xs-justify-content-center pa4">
 
@@ -41,7 +41,6 @@
                     <header class="box-header">
                         <figure><img src="./img/rosa_land.png" alt=""></figure>
                         <h1>autem harum doloribus id quis voluptate</h1>
-                        <h2></h2>
                     </header>
                     <div class="box-content">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae quas fugit, iste
@@ -50,7 +49,8 @@
                         </p>
                     </div>
                     <footer class="box-footer">
-                        <div class="box-actions"><button class="button">Conferir</button></div>
+                        <div class="box-actions xs-justify-content-flex-end"><button class="button">Conferir</button>
+                        </div>
                     </footer>
                 </div>
 
@@ -67,33 +67,137 @@
 
 
             </section>
-        </section> -->
-        <section id="main-features" data-animation-activator="1" class="row accent">
+        </section>
+        <section id="main-features" data-animation-activator class="row accent">
             <h2 class="col-xs12 xs-text-align-center pa4">Title 2</h2>
 
-            <div class="box little-box ma4 pa4">
+            <div class="box little-box col-xs12 col-md6 ma4 pa4">
                 <div class="little-box-content">
                     <h3>Placeat omnis vero</h3>
-                    <p>Lorem ipsum dolor sit, laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde illum est dolores placeat consequuntur corrupti. Voluptatum, fugit sunt!</p>
+                    <p>Lorem ipsum dolor sit, laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde
+                        illum est dolores placeat consequuntur corrupti. Voluptatum, fugit sunt!</p>
                 </div>
                 <div class="little-box-image"><img src="./img/rosa_port.png" alt=""></div>
             </div>
-            <div class="box little-box ma4 pa4">
+            <div class="box little-box col-xs12 col-md6 ma4 pa4">
                 <div class="little-box-content">
                     <h3>Quidem dicta earum temporibus cum necessitatibus</h3>
-                    <p>Amet dolores fugiat quo. Laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde illum est dolores placeat consequuntur corrupti.</p>
+                    <p>Amet dolores fugiat quo. Laudantium, quisquam voluptas aperiam possimus tenetur, hic eaque unde
+                        illum est dolores placeat consequuntur corrupti.</p>
                 </div>
                 <div class="little-box-image"><img src="./img/rosa_land.png" alt=""></div>
             </div>
 
         </section>
-        <section id="main-how-it-works" data-animation-activator="2" class="row">
-            <h2 class="col-xs12 xs-text-align-center  pa4">Title 3</h2>
+        <section id="main-how-it-works" class="row primary">
+            <h2 class="col-xs12 xs-text-align-center pa4">Title 3</h2>
+
+
+            <div class="row xs-align-items-center xs-justify-content-center">
+                <div class="box primary pa4 col-xs12 col-md6">
+                    <header class="box-header">
+                        <h1>autem harum doloribus id quis voluptate</h1>
+                    </header>
+                    <div class="box-content">
+                        <video controls aria-controls="true">
+                            <source src="./video/UKS_S04E12.mkv" type="">
+                        </video>
+                    </div>
+                    <footer class="box-footer my4">
+                        <div class="box-actions xs-justify-content-center"><button class="button">Conferir</button>
+                        </div>
+                    </footer>
+                </div>
+
+            </div>
+
+
         </section>
-        <section id="main-pricing" class="row">
-            <h2 class="col-xs12 xs-text-align-center  pa4">Title 4</h2>
+        <section id="main-pricing" data-animation-activator class="row secondary">
+            <h2 class="col-xs12 xs-text-align-center pa4">Title 4</h2>
+            <section
+                class="row pa4 pt8 color-inverted pa4">
+
+                <div class="box icon-box secondary pa4">
+                    <header class="box-header">
+                        <figure><img src="./img/rosa_land.png" alt=""></figure>
+                        <h2 class="mt4">voluptate</h2>
+                    </header>
+                    <div class="box-content">
+                        <ul>
+                            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ducimus quas sit aspernatur, adipisci ex in et hic itaque recusandae enim pariatur debitis architecto! Aliquam ab eos perspiciatis itaque adipisci.</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+                            <li>Item 4</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus qui at fugiat commodi? Quasi quae est necessitatibus fugiat eum sint, reiciendis molestias adipisci, aliquid iusto tempora ea suscipit nostrum nemo.</li>
+                        </ul>
+                    </div>
+                    <footer class="box-footer">
+                        <div class="box-actions row xs-justify-content-flex-end"><button class="button">Conferir</button>
+                        </div>
+                    </footer>
+                </div>
+                <div class="box icon-box secondary pa4">
+                    <header class="box-header column xs-align-items-center">
+                        <figure><img src="./img/rosa_land.png" alt=""></figure>
+                        <h2 class="mt4">voluptate</h2>
+                    </header>
+                    <div class="box-content">
+                        <ul>
+                            <li>Item 1</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+                            <li>Item 4</li>
+                            <li>Item 5</li>
+                        </ul>
+                    </div>
+                    <footer class="box-footer">
+                        <div class="box-actions row xs-justify-content-flex-end"><button class="button">Conferir</button>
+                        </div>
+                    </footer>
+                </div>
+                <div class="box icon-box secondary pa4">
+                    <header class="box-header column xs-align-items-center">
+                        <figure><img src="./img/rosa_land.png" alt=""></figure>
+                        <h2 class="mt4">voluptate</h2>
+                    </header>
+                    <div class="box-content">
+                        <ul>
+                            <li>Item 1</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+                            <li>Item 4</li>
+                            <li>Item 5</li>
+                        </ul>
+                    </div>
+                    <footer class="box-footer">
+                        <div class="box-actions row xs-justify-content-flex-end"><button class="button">Conferir</button>
+                        </div>
+                    </footer>
+                </div>
+                <div class="box icon-box secondary pa4">
+                    <header class="box-header column xs-align-items-center">
+                        <figure><img src="./img/rosa_land.png" alt=""></figure>
+                        <h2 class="mt4">voluptate</h2>
+                    </header>
+                    <div class="box-content">
+                        <ul>
+                            <li>Item 1</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+                            <li>Item 4</li>
+                            <li>Item 5</li>
+                        </ul>
+                    </div>
+                    <footer class="box-footer">
+                        <div class="box-actions row xs-justify-content-flex-end"><button class="button">Conferir</button>
+                        </div>
+                    </footer>
+                </div>
+
+            </section>
         </section>
-        <section id="main-contact" class="row">
+        <section id="main-contact" data-animation-activator class="row inverted color-main">
             <h2 class="col-xs12 xs-text-align-center  pa4">Title 5</h2>
         </section>
     </main>
