--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -32,8 +32,7 @@
                 <li><a href="#main-contact">Link 5</a></li>
             </ul>
         </nav>
-        <div class="logo"><img src="./img/logo.svg" alt=""></div>
-        <label for="options-controller" class="sr-only"><i class="mdi mdi-menu"></i>Menu</label>
+        <label for="options-controller" class="sr-only"><i class="mdi mdi-menu"></i>Options</label>
         <input type="radio" name="header-controllers" id="options-controller" checked>
         <div id="options">
             <ul>
@@ -44,6 +43,10 @@
                 <li><a href="#main-contact">Option 5</a></li>
             </ul>
         </div>
+        <label for="close-controller" class="sr-only"><i class="mdi mdi-menu"></i>Close</label>
+        <input type="radio" name="header-controllers" id="close-controller" checked>
+        <div id="logo" class="logo"><img src="./img/logo.svg" alt=""></div>
+
     </header>
 
     <main id="main">
