--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -21,8 +21,6 @@
     </ul>
 
     <header id="header" class="primary color-inverted">
-        <label for="nav-controller" class="sr-only"><i class="mdi mdi-menu"></i>Menu</label>
-        <input type="radio" name="header-controllers" id="nav-controller" checked>
         <nav id="nav">
             <ul>
                 <li><a href="#main-welcome">Link 1</a></li>
@@ -32,8 +30,6 @@
                 <li><a href="#main-contact">Link 5</a></li>
             </ul>
         </nav>
-        <label for="options-controller" class="sr-only"><i class="mdi mdi-menu"></i>Options</label>
-        <input type="radio" name="header-controllers" id="options-controller" checked>
         <div id="options">
             <ul>
                 <li><a href="#main-welcome">Option 1</a></li>
@@ -43,13 +39,42 @@
                 <li><a href="#main-contact">Option 5</a></li>
             </ul>
         </div>
-        <label for="close-controller" class="sr-only"><i class="mdi mdi-menu"></i>Close</label>
-        <input type="radio" name="header-controllers" id="close-controller" checked>
+
+        <div class="custom-radio main color-inverted">
+            <label for="nav-controller">
+                <i class="mdi mdi-menu"></i><span class="sr-only">Menu</span>
+            </label>
+            <input tabindex="0" type="radio" name="header-controllers" id="nav-controller" title="Open navigation bar" checked>
+            <div class="switch">
+                <div class="background"></div>
+            </div>
+        </div>
+
+        <div class="custom-radio main color-inverted">
+            <label for="options-controller">
+                <i class="mdi mdi-menu"></i><span class="sr-only">Menu</span>
+            </label>
+            <input tabindex="0" type="radio" name="header-controllers" id="options-controller" title="Open site options" checked>
+            <div class="switch">
+                <div class="background"></div>
+            </div>
+        </div>
+
+        <div class="custom-radio main color-inverted">
+            <label for="close-controller">
+                <i class="mdi mdi-close"></i><span class="sr-only">Close</span>
+            </label>
+            <input tabindex="0" type="radio" name="header-controllers" id="close-controller" title="Close all" checked>
+            <div class="switch">
+                <div class="background"></div>
+            </div>
+        </div>
+
         <div id="logo" class="logo"><img src="./img/logo.svg" alt=""></div>
 
     </header>
 
-    <main id="main">
+    <!-- <main id="main">
         <section id="main-welcome" class="row fluid">
             <section
                 class="row pa4 pt8 color-inverted col-xs12 col-sm6 xs-align-items-center xs-justify-content-center pa4">
@@ -244,7 +269,7 @@
 
     <footer id="footer">
 
-    </footer>
+    </footer> -->
 
 </body>
 
