add: support to space clicks act like mouse click in anchors

--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -21,7 +21,7 @@
     </ul>
 
     <header id="header" class="primary color-inverted">
-        <nav id="nav">
+        <nav id="nav" grand_parent>
             <ul>
                 <li><a href="#main-welcome">Link 1</a></li>
                 <li><a href="#main-features">Link 2</a></li>
@@ -30,7 +30,7 @@
                 <li><a href="#main-contact">Link 5</a></li>
             </ul>
         </nav>
-        <div id="options">
+        <div id="options" grand_parent>
             <ul>
                 <li><a href="#main-welcome">Option 1</a></li>
                 <li><a href="#main-features">Option 2</a></li>
