fix: tab navigation in header menus

--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -39,42 +39,29 @@
                 <li><a href="#main-contact">Option 5</a></li>
             </ul>
         </div>
-        <div class="header-item-nav">
-            <div class="custom-radio main color-inverted">
-                <label for="nav-controller">
-                    <i class="mdi mdi-menu"></i><span class="sr-only">Nav</span>
-                </label>
-                <input tabindex="0" type="radio"  name="header-controllers" id="nav-controller"
-                    title="Open navigation bar">
-                <div class="switch">
-                    <div class="background"></div>
-                </div>
+
+
+        <div class="custom-radio main color-inverted">
+            <label for="nav-controller">
+                <i class="mdi mdi-menu"></i><span class="sr-only">Nav</span>
+            </label>
+            <input tabindex="0" type="radio" name="header-controllers" id="nav-controller" title="Open navigation bar">
+            <div class="switch">
+                <div class="background"></div>
             </div>
         </div>
-        <div class="header-item-logo">
-            <div id="logo" class="logo"><img src="./img/logo.svg" alt=""></div>
-        </div>
-        <div class="header-item-options">
-            <div class="custom-radio main color-inverted">
-                <label for="options-controller">
-                    <i class="mdi mdi-menu"></i><span class="sr-only">Options</span>
-                </label>
-                <input tabindex="0" type="radio"  name="header-controllers" id="options-controller"
-                    title="Open site options">
-                <div class="switch">
-                    <div class="background"></div>
-                </div>
-            </div>
-        </div>
-        <div class="header-item-close">
-            <div class="custom-radio main color-inverted">
-                <label for="close-controller">
-                    <i class="mdi mdi-close"></i><span class="sr-only">Close</span>
-                </label>
-                <input tabindex="0" type="radio"  name="header-controllers" id="close-controller" title="Close all">
-                <div class="switch">
-                    <div class="background"></div>
-                </div>
+
+        <div id="logo" class="logo"><img src="./img/logo.svg" alt=""></div>
+
+
+        <div class="custom-radio main color-inverted">
+            <label for="options-controller">
+                <i class="mdi mdi-menu"></i><span class="sr-only">Options</span>
+            </label>
+            <input tabindex="0" type="radio" name="header-controllers" id="options-controller"
+                title="Open site options">
+            <div class="switch">
+                <div class="background"></div>
             </div>
         </div>
 
