add: alpha variations for the theme

--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -20,7 +20,7 @@
         <li><a href="#main">Skip to main content</a></li>
     </ul>
 
-    <header id="header" class="primary color-inverted">
+    <header id="header" class="alpha-primary-1 color-inverted">
         <nav id="nav" grand_parent>
             <ul>
                 <li><a href="#main-welcome">Link 1</a></li>
@@ -41,11 +41,11 @@
         </div>
 
 
-        <div class="custom-radio main color-inverted">
+        <div class="custom-checkbox main color-inverted">
             <label for="nav-controller">
                 <i class="mdi mdi-menu"></i><span class="sr-only">Nav</span>
             </label>
-            <input tabindex="0" type="radio" name="header-controllers" id="nav-controller" title="Open navigation bar">
+            <input tabindex="0" type="checkbox" name="header-controllers" id="nav-controller" title="Open navigation bar">
             <div class="switch">
                 <div class="background"></div>
             </div>
@@ -54,11 +54,11 @@
         <div id="logo" class="logo"><img src="./img/logo.svg" alt=""></div>
 
 
-        <div class="custom-radio main color-inverted">
+        <div class="custom-checkbox main color-inverted">
             <label for="options-controller">
                 <i class="mdi mdi-menu"></i><span class="sr-only">Options</span>
             </label>
-            <input tabindex="0" type="radio" name="header-controllers" id="options-controller"
+            <input tabindex="0" type="checkbox" name="header-controllers" id="options-controller"
                 title="Open site options">
             <div class="switch">
                 <div class="background"></div>
@@ -72,7 +72,7 @@
             <section
                 class="row pa4 pt8 color-inverted col-xs12 col-sm6 xs-align-items-center xs-justify-content-center pa4">
 
-                <div tabindex="0" class="box secondary pa4 col-xs10 col-sm6">
+                <div tabindex="0" class="box alpha-secondary-3 pa4 col-xs12">
                     <header>
                         <figure><img src="./img/rosa_land.png" alt=""></figure>
                         <h1>autem harum doloribus id quis voluptate</h1>
@@ -91,7 +91,7 @@
 
             </section>
             <section
-                class="row secondary color-inverted col-xs12 col-sm6 xs-align-items-center xs-justify-content-center pa4">
+                class="row alpha-secondary-3 color-inverted col-xs12 col-sm6 xs-align-items-center xs-justify-content-center pa4">
 
                 <div class="register col-xs10 col-sm6 row xs-justify-content-center xs-text-align-left">
                     <h2>Ex accusamus tempore culpa placeat?</h2>
