add: super round border

--- a/productLandingPage/temp.html
+++ b/productLandingPage/temp.html
@@ -1,150 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <meta name="author" content="Ítalo Polazzi">
-    <meta name="description" content="A Product Landing Page project as part of the challenges os FreeCodeCamp">
-    <title>Product Landing Page</title>
-    <link rel="stylesheet" href="./styles/index/reset.css">
-    <link rel="stylesheet" href="./styles/index/index.css">
-    <link rel="stylesheet" href="./styles/index/materialdesignicons.min.css">
-
-    <script src="./js/index.js" type="module"></script>
-</head>
-
-<body class="main">
-    <ul class="sr-only">
-        <li><a href="#nav-bar">Skip to navigation</a></li>
-        <li><a href="#main">Skip to main content</a></li>
-    </ul>
-
-    <header id="header" class="alpha-primary-1 color-inverted">
-        <nav id="nav-bar" grand_parent>
-            <ul>
-                <li><a class="nav-link" href="#main-welcome">Link 1</a></li>
-                <li><a class="nav-link" href="#main-features">Link 2</a></li>
-                <li><a class="nav-link" href="#main-how-it-works">Link 3</a></li>
-                <li><a class="nav-link" href="#main-pricing">Link 4</a></li>
-                <li><a class="nav-link" href="#main-contact">Link 5</a></li>
-            </ul>
-        </nav>
-        <div id="options" grand_parent>
-            <ul>
-                <li><a href="#main-welcome">Option 1</a></li>
-                <li><a href="#main-features">Option 2</a></li>
-                <li><a href="#main-how-it-works">Option 3</a></li>
-                <li><a href="#main-pricing">Option 4</a></li>
-                <li><a href="#main-contact">Option 5</a></li>
-            </ul>
-        </div>
-
-
-        <div class="custom-checkbox main color-inverted">
-            <label for="nav-controller">
-                <i class="mdi mdi-menu"></i><span class="sr-only">Nav</span>
-            </label>
-            <input tabindex="0" type="checkbox" name="header-controllers" id="nav-controller"
-                title="Open navigation bar">
-            <div class="switch">
-                <div class="background"></div>
-            </div>
-        </div>
-
-        <div id="logo" class="logo"><img id="header-img" src="./img/logo.svg" alt=""></div>
-
-
-        <div class="custom-checkbox main color-inverted">
-            <label for="options-controller">
-                <i class="mdi mdi-menu"></i><span class="sr-only">Options</span>
-            </label>
-            <input tabindex="0" type="checkbox" name="header-controllers" id="options-controller"
-                title="Open site options">
-            <div class="switch">
-                <div class="background"></div>
-            </div>
-        </div>
-
-    </header>
-
-    <main id="main">
         <section id="main-welcome" class="row fluid">
-            <section id="circles-container">
-                <div id="title-img-container">Rosalía</div>
-                <div id="links-container">Home</div>
-                <div class="images-container">
-                    <div class="img-container">
-                        <a title="DE AQUÍ NO SALES" href="#./img/rosa (1).jpg">
-                            <img src="./img/rosa (1).jpg" alt="">
-                        </a>
+            <section class="row  pa4 pt8 color-inverted col-xs12 col-sm6 xs-align-center xs-justify-center pa4">
+
+                <!-- <div tabindex="0" class="box alpha-secondary-3 pa4 col-xs12">
+                    <header>
+                        <figure><img src="./img/rosa_land.png" alt=""></figure>
+                        <h1>autem harum doloribus id quis voluptate</h1>
+                    </header>
+                    <div class="x-content">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae quas fugit, iste
+                            doloremque
+                            voluptate.
+                        </p>
                     </div>
-                    <div class="img-container">
-                        <a title="MALAMENTE" href="#./img/rosa (2).jpg">
-                            <img src="./img/rosa (2).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="img-container">
-                        <a title="BAGDAD" href="#./img/rosa (3).jpg">
-                            <img src="./img/rosa (3).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="img-container">
-                        <a title="DI MI NOMBRE" href="#./img/rosa (4).jpg">
-                            <img src="./img/rosa (4).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="img-container">
-                        <a title="NANA" href="#./img/rosa (5).jpg">
-                            <img src="./img/rosa (5).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="img-container">
-                        <a title="PRESO" href="#./img/rosa (6).jpg">
-                            <img src="./img/rosa (6).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="img-container">
-                        <a title="EL MAL QUERER" href="#./img/rosa (7).jpg">
-                            <img src="./img/rosa (7).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="img-container">
-                        <a title="QUE NO SALGA LA LUNA" href="#./img/rosa (8).jpg">
-                            <img src="./img/rosa (8).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="img-container">
-                        <a title="PIENSO EN TU MIRÁ" href="#./img/rosa (9).jpg"><img src="./img/rosa (9).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="img-container">
-                        <a title="RENIEGO" href="#./img/rosa (10).jpg"><img src="./img/rosa (10).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="img-container">
-                        <a title="MALDICIÓN" href="#./img/rosa (11).jpg"><img src="./img/rosa (11).jpg" alt="">
-                        </a>
-                    </div>
-                </div>
+                    <footer class="x-footer">
+                        <div class="x-actions xs-justify-end"><button class="button">Conferir</button>
+                        </div>
+                    </footer>
+                </div> -->
+
             </section>
-            <section class="row alpha-secondary-3 color-inverted col-xs12 xs-align-center xs-justify-center pa4">
+            <section
+                class="row alpha-secondary-3 color-inverted col-xs12 col-sm6 xs-align-center xs-justify-center pa4">
 
                 <div class="register col-xs10 col-sm6 row xs-justify-center xs-text-left">
                     <h2>Ex accusamus tempore culpa placeat?</h2>
                     <label for="email" class="sr-only">Ex accusamus tempore culpa placeat?</label>
                     <input type="email" name="email" maxlength="65" minlength="5" placeholder="Your e-mail">
-
-                    <div class="input-button  mt8">
-                        <input type="submit" class="button" id="submit-newsletter" name="submit-newsletter"
-                            value="Registry" aria-valuetext="Registry" required>
-                    </div>
+                    <input type="submit" role="button" class="button mt4" value="Registry" aria-valuetext="Registry">
                 </div>
 
 
             </section>
         </section>
-
         <section id="main-features" data-animation-activator class="row accent">
             <h2 class="col-xs12 xs-text-center pa4">Title 2</h2>
 
@@ -299,7 +186,7 @@
         </section>
         <section id="main-contact" data-animation-activator class="row accent color-inverted">
             <h2 class="col-xs12 xs-text-center  pa4">Title 5</h2>
-            <div class="row xs-align-center xs-justify-center pb8">
+            <div class="row xs-align-center xs-justify-center">
                 <div tabindex="0" class="box pa4 col-xs12 col-md6">
                     <form class=" pa8" id="form" name="contact" action="">
                         <fieldset class=" pa8 mb8">
@@ -317,14 +204,11 @@
                             </div>
                             <div class="input mb4">
                                 <label for="message">Message</label>
-                                <textarea class="color-inverted" id="message" name="message"
-                                    maxlength="500" required
+                                <textarea class="color-inverted" id="message" name="message" maxlength="500" required
                                     aria-required="true"></textarea>
                             </div>
-                            <div class="input-button">
-                                <input type="submit" class="button" id="submit" name="submit"
-                                    value="Submit"
-                                    required>
+                            <div class="input-button mb4">
+                                <input type="submit" class="button" id="submit" name="submit" value="Submit" required>
                             </div>
                         </fieldset>
                     </form>
@@ -334,14 +218,3 @@
             </div>
 
         </section>
-
-    </main>
-
-    <footer id="footer">
-
-    </footer>
-
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
-</body>
-
-</html>
