--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -20,7 +20,7 @@
         <li><a href="#main">Skip to main content</a></li>
     </ul>
 
-    <header id="header" class="alpha-primary-1 color-inverted">
+    <header id="header" class="primary color-inverted">
         <nav id="nav-bar" grand_parent>
             <ul>
                 <li><a class="nav-link" href="#main-welcome">Link 1</a></li>
@@ -128,14 +128,14 @@
                     </div>
                 </div>
             </section>
-            <section class="row alpha-secondary-3 color-inverted col-xs12 xs-align-center xs-justify-center pa4">
+            <section class="row primary color-inverted col-xs12 xs-align-center xs-justify-center pa4">
 
                 <div class="register col-xs10 col-sm6 row xs-justify-center xs-text-left">
                     <h2>Ex accusamus tempore culpa placeat?</h2>
                     <label for="email" class="sr-only">Ex accusamus tempore culpa placeat?</label>
                     <input type="email" name="email" maxlength="65" minlength="5" placeholder="Your e-mail">
 
-                    <div class="input-button  mt8">
+                    <div class="input-button mt4">
                         <input type="submit" class="button" id="submit-newsletter" name="submit-newsletter"
                             value="Registry" aria-valuetext="Registry" required>
                     </div>
@@ -216,7 +216,7 @@
         </section>
         <section id="main-pricing" data-animation-activator class="row secondary">
             <h2 class="col-xs12 xs-text-center pa4">Title 4</h2>
-            <section class="row pa4 pt8 color-inverted pa4">
+            <section class="row pt8 color-inverted py4">
 
                 <div tabindex="0" class="box icon-box secondary pa4">
                     <header>
