fix: form contact alignments

--- a/productLandingPage/index.html
+++ b/productLandingPage/index.html
@@ -301,8 +301,8 @@
             <h2 class="col-xs12 xs-text-center  pa4">Title 5</h2>
             <div class="row xs-align-center xs-justify-center pb8">
                 <div tabindex="0" class="box pa4 col-xs12 col-md6">
-                    <form class=" pa8" id="form" name="contact" action="">
-                        <fieldset class=" pa8 mb8">
+                    <form class="column xs-align-end pa8" id="form" name="contact" action="">
+                        <fieldset class="mb8">
                             <legend class="mb4"> Contact us</legend>
 
                             <div class="input mb4">
@@ -317,16 +317,13 @@
                             </div>
                             <div class="input mb4">
                                 <label for="message">Message</label>
-                                <textarea class="color-inverted" id="message" name="message"
-                                    maxlength="500" required
+                                <textarea class="color-inverted" id="message" name="message" maxlength="500" required
                                     aria-required="true"></textarea>
                             </div>
-                            <div class="input-button">
-                                <input type="submit" class="button" id="submit" name="submit"
-                                    value="Submit"
-                                    required>
-                            </div>
                         </fieldset>
+                        <div class="input-button">
+                            <input type="submit" class="button" id="submit" name="submit" value="Submit" required>
+                        </div>
                     </form>
 
                 </div>
